fixed top and bottom spacing for container

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -47,9 +47,10 @@ html body {
   font-family: "Instrument Sans", sans-serif;
 }
 .container {
-  max-width: 1280px;
-  margin: 0rem auto;
+  margin: 4rem auto;
   padding: 1rem;
+  max-width: 1280px;
+  min-height: 100vh;
 }
 .headline {
   margin: 0rem 0rem 0rem 0rem;
